Tweak e2e psql